--- a/src/main/docker/Dockerfile.legacy-jar
+++ b/src/main/docker/Dockerfile.legacy-jar
@@ -82,8 +82,8 @@ FROM registry.access.redhat.com/ubi8/openjdk-17:1.18
 ENV LANGUAGE='en_US:en'
 
 
-COPY target/lib/* /deployments/lib/
-COPY target/*-runner.jar /deployments/quarkus-run.jar
+COPY target/quarkus-app/lib/* /deployments/lib/
+COPY target/quarkus-app/quarkus-run.jar /deployments/quarkus-run.jar
 
 EXPOSE 8080
 USER 185
