Keycloak authentication and authorization

--- a/quarkus-server/src/main/resources/application.properties
+++ b/quarkus-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 greeting=Good morning
 
 # OIDC Configuration
-quarkus.oidc.auth-server-url=http://localhost:8081/realms/quarkus
+# quarkus.oidc.auth-server-url=http://localhost:8081/realms/quarkus
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
 quarkus.oidc.tls.verification=none
@@ -11,8 +11,12 @@ quarkus.keycloak.policy-enforcer.enable=true
 
 # Tell Dev Services for Keycloak to import the realm file
 # This property is not effective when running the application in JVM or native modes
+quarkus.keycloak.devservices.enabled=true
 quarkus.keycloak.devservices.realm-path=quarkus-realm.json
+quarkus.keycloak.devservices.port=8081
+
 
 quarkus.log.level=INFO
 
 
+quarkus.http.limits.max-initial-line-length=4096
