--- a/quarkus-server/pom.xml
+++ b/quarkus-server/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-quartz</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
         </dependency>
