--- a/quarkus-server/src/main/resources/application.properties
+++ b/quarkus-server/src/main/resources/application.properties
@@ -16,3 +16,12 @@ quarkus.keycloak.devservices.realm-path=quarkus-realm.json
 quarkus.keycloak.devservices.port=8082
 
 quarkus.log.level=INFO
+
+
+quarkus.kafka.devservices.enabled=false
+mp.messaging.outgoing.input.bootstrap.servers=localhost:29092
+mp.messaging.outgoing.input.connector=smallrye-kafka
+mp.messaging.outgoing.input.topic=input-topic
+mp.messaging.incoming.alerts.bootstrap.servers=localhost:29092
+mp.messaging.incoming.alerts.connector=smallrye-kafka
+mp.messaging.incoming.alerts.topic=alert-topic
