--- a/quarkus-kafka-ws-consumer/pom.xml
+++ b/quarkus-kafka-ws-consumer/pom.xml
@@ -20,7 +20,7 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-websockets-client</artifactId>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>com.scylladb</groupId>
             <artifactId>scylla-driver-core</artifactId>
             <version>${scylla-driver.version}</version>
@@ -29,6 +29,32 @@
             <groupId>com.scylladb</groupId>
             <artifactId>scylla-driver-mapping</artifactId>
             <version>${scylla-driver.version}</version>
+        </dependency> -->
+        <dependency>
+            <groupId>com.scylladb</groupId>
+            <artifactId>java-driver-core</artifactId>
+            <version>4.17.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.scylladb</groupId>
+            <artifactId>java-driver-query-builder</artifactId>
+            <version>4.17.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.scylladb</groupId>
+            <artifactId>java-driver-mapper-runtime</artifactId>
+            <version>4.17.0.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-reactive</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
         </dependency>
     </dependencies>
 
