--- a/quarkus-kafka-ws-consumer/src/main/resources/application.properties
+++ b/quarkus-kafka-ws-consumer/src/main/resources/application.properties
@@ -3,3 +3,6 @@ scylla.db.keyspace=catalog
 scylla.db.cluster-name=mutant-cluster
 
 quarkus.http.port=8081
+
+quarkus.grpc.clients.messageService.host=localhost
+# quarkus.grpc.server.use-separate-server=false
