--- a/quarkus-kafka-ws-consumer/pom.xml
+++ b/quarkus-kafka-ws-consumer/pom.xml
@@ -18,6 +18,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-grpc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-websockets-client</artifactId>
         </dependency>
         <!-- <dependency>
@@ -39,6 +43,14 @@
             <groupId>com.scylladb</groupId>
             <artifactId>java-driver-query-builder</artifactId>
             <version>4.17.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-reactive-routes</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-cache</artifactId>
         </dependency>
 
         <dependency>
@@ -74,6 +86,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <properties>
+                        <quarkus.generate-code.grpc.descriptor-set.output-dir>src/main/java</quarkus.generate-code.grpc.descriptor-set.output-dir>
+                    </properties>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
