--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
       <module>quarkus-rabbitmq-producer</module>
       <module>quarkus-rabbitmq-consumer</module>
       <module>quarkus-kafka-ws-consumer</module>
+      <module>quarkus-apache-camel</module>
+      <module>quarkus-web3j</module>
   </modules>
   <properties>
     <compiler-plugin.version>3.12.1</compiler-plugin.version>
@@ -23,7 +25,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.7.2</quarkus.platform.version>
+    <quarkus.platform.version>3.9.2</quarkus.platform.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <lombok.version>1.18.30</lombok.version>
