--- a/quarkus-server-nr/pom.xml
+++ b/quarkus-server-nr/pom.xml
@@ -32,6 +32,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-spring-data-rest</artifactId>
+        </dependency>
     </dependencies>
   <build>
     <plugins>
