--- a/quarkus-server/src/main/resources/application.properties
+++ b/quarkus-server/src/main/resources/application.properties
@@ -11,19 +11,11 @@ quarkus.keycloak.policy-enforcer.enable=true
 
 # Tell Dev Services for Keycloak to import the realm file
 # This property is not effective when running the application in JVM or native modes
-# quarkus.keycloak.devservices.enabled=true
-# quarkus.keycloak.devservices.realm-path=quarkus-realm.json
-# quarkus.keycloak.devservices.port=8082
+quarkus.keycloak.devservices.enabled=true
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
+quarkus.keycloak.devservices.port=8082
 
 quarkus.log.level=INFO
-
-
-quarkus.kafka.devservices.enabled=false
-kafka.bootstrap.servers=localhost:29092
-mp.messaging.outgoing.input.connector=smallrye-kafka
-mp.messaging.outgoing.input.topic=input-topic
-mp.messaging.incoming.alerts.connector=smallrye-kafka
-mp.messaging.incoming.alerts.topic=alert-topic
 
 scylla.db.contract-points=localhost
 scylla.db.cluster-name=mutant-cluster
