--- a/quarkus-server-nr/src/main/resources/application.properties
+++ b/quarkus-server-nr/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.datasource.db-kind = mysql
-quarkus.datasource.username = user
+quarkus.datasource.username = root
 quarkus.datasource.password = password
-quarkus.datasource.jdbc.url = jdbc:mysql://mysql:3306/db
+quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/mysql-db
 quarkus.datasource.jdbc.max-size = 20
 quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.log.level = INFO
