--- a/quarkus-server/src/main/resources/application.properties
+++ b/quarkus-server/src/main/resources/application.properties
@@ -4,10 +4,9 @@ greeting=Good morning
 # quarkus.oidc.auth-server-url=http://localhost:8081/realms/quarkus
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
-quarkus.oidc.tls.verification=none
 
-# Enable Policy Enforcement
-quarkus.keycloak.policy-enforcer.enable=true
+quarkus.datasource.devservices.init-script-path=model.sql
+quarkus.hibernate-orm.sql-load-script=data.sql
 
 # Tell Dev Services for Keycloak to import the realm file
 # This property is not effective when running the application in JVM or native modes
