--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
     <module>jmeter-sampler</module>
     <module>quarkus-server-nr</module>
     <module>quarkus-kafka-consumer</module>
-      <module>quarkus-rabbitmq-producer</module>
-      <module>quarkus-rabbitmq-consumer</module>
-      <module>quarkus-kafka-ws-consumer</module>
-      <module>quarkus-apache-camel</module>
-      <module>quarkus-web3j</module>
+    <module>quarkus-rabbitmq-producer</module>
+    <module>quarkus-rabbitmq-consumer</module>
+    <module>quarkus-kafka-ws-consumer</module>
+    <module>quarkus-apache-camel</module>
+    <module>quarkus-web3j</module>
   </modules>
   <properties>
     <compiler-plugin.version>3.12.1</compiler-plugin.version>
@@ -25,7 +25,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.9.2</quarkus.platform.version>
+    <quarkus.platform.version>3.28.1</quarkus.platform.version>
+    <quarkus.reactive.version>3.15.7</quarkus.reactive.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <lombok.version>1.18.30</lombok.version>
